fix scrollbar hell in IE

--- a/src/Styles/_content.scss
+++ b/src/Styles/_content.scss
@@ -8,7 +8,7 @@ $toolbarHeight: 60px;
   //width: 50%;
   height: 100%;
 
-  overflow: scroll;
+  //overflow: scroll;
 
   > div {
     white-space: pre;
@@ -120,15 +120,18 @@ $toolbarHeight: 60px;
 
     #operation-generated {
 
-      height: 100%;
-      width: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
       float: left;
       padding: 0px;
       margin: 0px;
       overflow: hidden;
 
       font-family: $codeFontFamily;
-      //padding: 10px;
 
       .generated-content {
         position: relative;
@@ -151,7 +154,7 @@ $toolbarHeight: 60px;
           .gql-panel {
           
             padding: 10px;
-            overflow: scroll;
+            overflow: auto;
 
             &.invalid {
               color: lightgrey;
@@ -177,7 +180,13 @@ $toolbarHeight: 60px;
 
     #editor-result {
       
-      height: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+//      height: 100%;
       float: left;
       padding: 0px;
       margin: 0px;
@@ -190,7 +199,7 @@ $toolbarHeight: 60px;
         height: 100%;
 
         padding: 10px;
-        overflow: scroll;
+        overflow: auto;
 
         white-space: pre;
       }
