--- a/src/Styles/_creator_main.scss
+++ b/src/Styles/_creator_main.scss
@@ -9,6 +9,14 @@ $maxWidth: 800px;
   font-family: $codeFontFamily;
   font-size: 14px;
 
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  overflow: auto;
+
   .creator-meta {
 
     border: 1px solid lightgrey;
