--- a/src/Styles/_split_pane.scss
+++ b/src/Styles/_split_pane.scss
@@ -21,6 +21,7 @@
   }
 
   .Pane {
-    overflow: scroll;
+    //overflow: scroll;
+    overflow: hidden;
   }
 }
